@@ -11,6 +11,7 @@ New features:
 - 2863775 interopProvider needs SourceNamespaces property
 - 2707633 sfcb: doesn't advertise capabilities CMPIBrokerFT
 - 2908421 IndicationProfile: IndicationSubscription - RI props
+- 2914435 providers should receive param info from providerRegister
 
 Bugs fixed:
 
